<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#A4C639" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="23dp"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0099FF" />
        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:background="#CCCCCC"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="23dp"
            android:text="@string/image"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0099FF" />
        <EditText
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:background="#CCCCCC"
            android:ems="10"
            android:inputType="textUri"/>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="23dp"
            android:text="@string/Rating"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0099FF" />
        <EditText
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView4"
            android:layout_toRightOf="@+id/textView4"
            android:background="#CCCCCC"
            android:ems="10"
            android:inputType="number"/>
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="23dp"
            android:text="@string/Startdate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0099FF" />

        <EditText
            android:id="@+id/startdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView5"
            android:layout_marginLeft="7dp"
            android:layout_marginBottom="0dp"
            android:layout_toRightOf="@+id/textView5"
            android:background="#CCCCCC"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="23dp"
            android:text="@string/Startmonth"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0099FF" />
        <EditText
            android:id="@+id/startmonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView6"
            android:layout_toRightOf="@+id/textView6"
            android:background="#CCCCCC"
            android:ems="10"
            android:inputType="text"/>
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="23dp"
            android:text="@string/Startyear"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0099FF" />
        <EditText
            android:id="@+id/startyear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView7"
            android:layout_toRightOf="@+id/textView7"
            android:background="#CCCCCC"
            android:ems="10"
            android:inputType="number"/>
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="23dp"
            android:text="@string/enddate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0099FF" />
        <EditText
            android:id="@+id/enddate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView8"
            android:layout_toRightOf="@+id/textView8"
            android:background="#CCCCCC"
            android:ems="10"
            android:inputType="number"/>
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView8"
            android:layout_marginTop="23dp"
            android:text="@string/endmonth"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0099FF" />
        <EditText
            android:id="@+id/endmonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView9"
            android:layout_toRightOf="@+id/textView9"
            android:background="#CCCCCC"
            android:ems="10"
            android:inputType="text"/>
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView9"
            android:layout_marginTop="23dp"
            android:text="@string/endyear"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0099FF" />
        <EditText
            android:id="@+id/endyear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView10"
            android:layout_toRightOf="@+id/textView10"
            android:background="#CCCCCC"
            android:ems="10"
            android:inputType="number"/>
        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView10"
            android:layout_marginTop="23dp"
            android:text="@string/episode"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0099FF" />
        <EditText
            android:id="@+id/episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView11"
            android:layout_toRightOf="@+id/textView11"
            android:background="#CCCCCC"
            android:ems="10"
            android:inputType="number">

        <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView11"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="69dp"
            android:background="#0099FF"
            android:text="@string/add"
            android:textColor="#FFFFFF" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>